--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,28 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <h1 id="axis"/>
-    <script src="/controller.js"></script>
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>VEX Over Internet</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+ <ul class="pages">
+    <li class="chat page">
+      <div class="chatArea">
+        <ul id="mymess" class="messages"></ul>
+      </div>
+
+    </li>
+    <li class="login page">
+      <div class="form">
+        <h3 class="title">what's the password?</h3>
+        <input class="usernameInput" type="password" maxlength="14" />
+      </div>
+    </li>
+  </ul>
+
+  <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/main.js"></script>
+</body>
 </html>
-
-<style>
-
- body {
-   background-color:#1e1e1e;
- }
-
- h1 {
-   font-family: Arial;
-   font-size:20vh;
-   color:white;
- }
-
- </style>
